Attpemt #3 to fix responsive layout. Moved more meta tags around, removed style.css custom additions.

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ body {
     display: none !important;
   }
 }
-
+/*
 @media (min-width: 768px) and (max-width: 991px) {
   .hidden-sm {
     display: none !important;
@@ -113,7 +113,7 @@ body {
     display: none !important;
   }
 }
-
+*/
 /*  ----------------------------------------------------------
 [2. #main-container]
 ----------------------------------------------------------  */
