style.css replaced with what's used on the template webstore.

--- a/css/style.css
+++ b/css/style.css
@@ -939,6 +939,12 @@ body {
 	border-radius: 3px;
 }
 
+.twitter-items {
+	padding-bottom: 15px;
+	margin-bottom: 15px;
+	border-bottom: 1px solid #ddd;
+}
+
 /*  ----------------------------------------------------------
 [9. #blog-post]
 ----------------------------------------------------------  */
