Major overhaul of the Twitter functionality. It actually works now!

--- a/css/colors/blue.css
+++ b/css/colors/blue.css
@@ -19,7 +19,7 @@
 .social li a,
 .job-title span,
 .list .icon,
-.interact a,
+/*.interact a,*/
 .subscribe-notification,
 .rating {
 	color: #0099d5;
