--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,12 @@ body {
   overflow-y: hidden;
 }
 
+ul {
+    list-style: none;
+    padding:0;
+    margin:0;
+}
+
 .preloader {
 	position: fixed;
 	left: 0;
@@ -934,7 +940,7 @@ body {
 /*	Twitter */
 
 #twitter {
-	background: #eaeaea;
+	background: #0099d5;
 	padding: 15px 20px;
 	border-radius: 3px;
 }
@@ -942,7 +948,7 @@ body {
 .twitter-items {
 	padding-bottom: 15px;
 	margin-bottom: 15px;
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #0099d5;
 }
 
 /*  ----------------------------------------------------------
