Many more style edits. Mobile should be fine now, looks responsive working 100% (I hope). Copy edits in the About Section.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -919,6 +919,28 @@ hr {
     width: 1170px;
   }
 }
+/* -- ADDITIONAL CLASSES FROM 3.3.6 TO MAKE ITEMS HIDDEN ON SMALL AND LARGE SCREENS -- */
+@media (max-width: 767px) {
+  .hidden-xs {
+    display: none !important;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .hidden-sm {
+    display: none !important;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .hidden-md {
+    display: none !important;
+  }
+}
+@media (min-width: 1200px) {
+  .hidden-lg {
+    display: none !important;
+  }
+}
+/* -- END ADDITIONAL ITEMS -- */
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
