--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,8 @@ ul {
 
 #timeline {
 	width: 100%;
+	height: 650px;
+    	overflow-y: auto;
 	position: relative;
 	margin-bottom: 40px;
 }
@@ -356,7 +358,7 @@ ul {
 	content: "";
 	height: 100%;
 	width: 3px;
-	background: #dfdfdf;
+	/*background: #dfdfdf; temporarly disabled */
 	position: absolute;
 	left: 23px;
 	top: 0;
