New updates to the portfolio section including pages and new images. Some old images removed, code fixed on the index page, and small style edits for the new portfolio pages as well.

--- a/css/style.css
+++ b/css/style.css
@@ -824,6 +824,15 @@ ul {
 	outline: none;
 }
 
+video {
+  width: 100%    !important;
+  height: auto   !important;
+  margin-bottom: 30px !important;
+}
+
+.audioEmbed {
+	margin-bottom: 30px !important;	
+}
 
 /*  ----------------------------------------------------------
 [8. #contact]
@@ -1042,7 +1051,7 @@ ul {
 
 .blog-img,
 .portfolio-img {
-	width: 100%;
+	/*width: 100%;*/
 	border-radius: 3px;
 	margin-bottom: 10px;
 }
